fix spacing and line height issues

--- a/user/themes/emil-smith/src/scss/partials/_base.scss
+++ b/user/themes/emil-smith/src/scss/partials/_base.scss
@@ -5,7 +5,7 @@ html, body {
     color:$white;
     font-family: 'Roboto', sans-serif;
     font-size:18px;
-    line-height:1.3em;
+    line-height:1.6em;
 }
 
 body {
@@ -16,11 +16,12 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Raleway', sans-serif;
     font-weight:700;
     line-height:1.2em;
-    margin:0.3em 0 0.2em;
+    margin:5px 0;
 }
 
 h1 {
     font-size:50px;
+    margin:0 0 15px;
     @media screen and (min-width:768px) {
         font-size:70px;
     }
