--- a/user/themes/emil-smith/src/scss/partials/_clever.scss
+++ b/user/themes/emil-smith/src/scss/partials/_clever.scss
@@ -47,8 +47,8 @@
 
 .clever-item {
     margin-bottom: 45px;
-    border-left:solid 4px rgba($pink, 0.4);
-    padding-left:26px;
+    //border-left:solid 4px rgba($pink, 0.4);
+    //padding-left:26px;
     &:last-of-type {
         margin:0;
     }
