--- a/user/themes/emil-smith/src/scss/partials/_intro.scss
+++ b/user/themes/emil-smith/src/scss/partials/_intro.scss
@@ -7,8 +7,12 @@
     overflow:hidden;
     .intro-msg {
         font-size:70px;
+        margin:0;
         @media screen and (min-width:768px) {
             font-size:120px;
         }
+    }
+    h3 {
+        margin:0;
     }
 }
