--- a/user/themes/emil-smith/src/scss/partials/_module.scss
+++ b/user/themes/emil-smith/src/scss/partials/_module.scss
@@ -4,7 +4,7 @@
     min-height:50vh;
     padding:70px 0;
     h1:first-child {
-        margin:0;
+        //margin:0;
     }
 }
 
