--- a/user/themes/emil-smith/src/scss/partials/_mydudes.scss
+++ b/user/themes/emil-smith/src/scss/partials/_mydudes.scss
@@ -13,7 +13,7 @@
         flex-direction:column;
     }
     h1 {
-        margin-bottom:60px;
+        margin-bottom:0;
     }
     .dude-wrap {
         margin-top:30px;
